parse/HireXParser.py
# Generated from HireX.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class HireXParser ( Parser ):

    grammarFileName = "HireX.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'frontend developer'", "'backend developer'", 
                     "'full-stack developer'", "'software engineer'", "'ai engineer'", 
                     "'ml engineer'", "'data scientist'", "'data engineer'", 
                     "'data analyst'", "'qa/qc engineer'", "'tester'", "'security engineer'", 
                     "'devops engineer'", "'cloud engineer'", "'network engineer'", 
                     "'embedded engineer'", "'mobile developer'", "'android developer'", 
                     "'ios developer'", "'solution architect'", "'technical lead'", 
                     "'product manager'", "'scrum master'", "'game developer'", 
                     "'blockchain developer'", "'research engineer'", "'intern'", 
                     "'fresher'", "'junior'", "'medium'", "'senior'", "'director'", 
                     "'manager'", "'bachelor'", "'engineering'", "'master'", 
                     "'phd'", "'computer science'", "'computer engineering'", 
                     "'network engineering'", "'data science'", "'artificial intelligence'", 
                     "'cybersecurity'", "'information systems'", "'git'", 
                     "'docker'", "'kubernetes'", "'jenkins'", "'jira'", 
                     "'postman'", "'webpack'", "'npm'", "'yarn'", "'vscode'", 
                     "'intellij'", "'eclipse'", "'figma'", "'trello'", "'slack'", 
                     "'notion'", "'aws cli'", "'gcp sdk'", "'azure cli'", 
                     "'terraform'", "'github actions'", "'python'", "'java'", 
                     "'c'", "'c++'", "'c#'", "'go'", "'rust'", "'javascript'", 
                     "'typescript'", "'ruby'", "'php'", "'swift'", "'kotlin'", 
                     "'scala'", "'r'", "'matlab'", "'bash'", "'sql'", "'haskell'", 
                     "'perl'", "'pytorch'", "'tensorflow'", "'keras'", "'scikit-learn'", 
                     "'xgboost'", "'lightgbm'", "'opencv'", "'flask'", "'django'", 
                     "'spring'", "'express'", "'fastapi'", "'next.js'", 
                     "'nuxt.js'", "'react'", "'vue'", "'angular'", "'bootstrap'", 
                     "'laravel'", "'.net'", "'asp.net'", "'electron'", "'flutter'", 
                     "'react native'", "'node.js'", "'nestjs'", "'redux'", 
                     "'mui'", "'tailwindcss'", "'springboot'", "'pandas'", 
                     "'numpy'", "'mysql'", "'postgresql'", "'sqlite'", "'mongodb'", 
                     "'redis'", "'mariadb'", "'oracle'", "'sql server'", 
                     "'dynamodb'", "'cassandra'", "'elasticsearch'", "'aws'", 
                     "'azure'", "'gcp'", "'google cloud'", "'amazon web services'", 
                     "'firebase'", "'heroku'", "'digitalocean'", "'vercel'", 
                     "'netlify'", "'english'", "'japanese'", "'chinese'", 
                     "'korean'", "'german'", "'portugeese'", "'french'", 
                     "'REQUIREMENTS'", "'PREFERENCES'", "'stack'", "'education'", 
                     "'position:'", "'level:'", "'language:'", "'activities:'", 
                     "'experience:'", "'references:'", "'tools:'", "'programming languages:'", 
                     "'framework libraries:'", "'databases cloud services:'", 
                     "'major:'", "'degree:'", "'gpa:'", "'name: '", "'years'", 
                     "'show'", "<INVALID>", "'with'", "'{'", "'}'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "REQUIRE_SECTION", "PREFER_SECTION", 
                      "STACK_SECTION", "EDU_SECTION", "POSITION_LABEL", 
                      "LEVEL_LABEL", "LANG_LABEL", "ACTIVITY_LABEL", "EXP_LABEL", 
                      "REF_LABEL", "TOOL_LABEL", "PROG_LANG_LABEL", "FRAMEWORK_LABEL", 
                      "DATA_LABEL", "MAJOR_LABEL", "DEGREE_LABEL", "GPA_LABEL", 
                      "NAME_LABEL", "YEARS", "SHOW", "CV", "WITH", "OPEN_CURLY", 
                      "CLOSE_CURLY", "COMMA", "COMPARATOR", "INT", "FLOAT", 
                      "ID", "WS" ]

    RULE_program = 0
    RULE_showConditional = 1
    RULE_condition = 2
    RULE_jd = 3
    RULE_requirements = 4
    RULE_preferences = 5
    RULE_requirePosition = 6
    RULE_requireLevel = 7
    RULE_requireTechnicalSkills = 8
    RULE_requireTools = 9
    RULE_requireProLang = 10
    RULE_requireFrameworks = 11
    RULE_requireDB = 12
    RULE_requireEducation = 13
    RULE_requireMajor = 14
    RULE_requireDegree = 15
    RULE_requireGPA = 16
    RULE_requireLanguage = 17
    RULE_requireExperience = 18
    RULE_requireActivites = 19
    RULE_requireName = 20
    RULE_position = 21
    RULE_level = 22
    RULE_degree = 23
    RULE_major = 24
    RULE_tool = 25
    RULE_proLang = 26
    RULE_framework = 27
    RULE_db = 28
    RULE_lang = 29

    ruleNames =  [ "program", "showConditional", "condition", "jd", "requirements", 
                   "preferences", "requirePosition", "requireLevel", "requireTechnicalSkills", 
                   "requireTools", "requireProLang", "requireFrameworks", 
                   "requireDB", "requireEducation", "requireMajor", "requireDegree", 
                   "requireGPA", "requireLanguage", "requireExperience", 
                   "requireActivites", "requireName", "position", "level", 
                   "degree", "major", "tool", "proLang", "framework", "db", 
                   "lang" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    T__103=104
    T__104=105
    T__105=106
    T__106=107
    T__107=108
    T__108=109
    T__109=110
    T__110=111
    T__111=112
    T__112=113
    T__113=114
    T__114=115
    T__115=116
    T__116=117
    T__117=118
    T__118=119
    T__119=120
    T__120=121
    T__121=122
    T__122=123
    T__123=124
    T__124=125
    T__125=126
    T__126=127
    T__127=128
    T__128=129
    T__129=130
    T__130=131
    T__131=132
    T__132=133
    T__133=134
    T__134=135
    T__135=136
    T__136=137
    T__137=138
    T__138=139
    T__139=140
    T__140=141
    T__141=142
    T__142=143
    T__143=144
    T__144=145
    REQUIRE_SECTION=146
    PREFER_SECTION=147
    STACK_SECTION=148
    EDU_SECTION=149
    POSITION_LABEL=150
    LEVEL_LABEL=151
    LANG_LABEL=152
    ACTIVITY_LABEL=153
    EXP_LABEL=154
    REF_LABEL=155
    TOOL_LABEL=156
    PROG_LANG_LABEL=157
    FRAMEWORK_LABEL=158
    DATA_LABEL=159
    MAJOR_LABEL=160
    DEGREE_LABEL=161
    GPA_LABEL=162
    NAME_LABEL=163
    YEARS=164
    SHOW=165
    CV=166
    WITH=167
    OPEN_CURLY=168
    CLOSE_CURLY=169
    COMMA=170
    COMPARATOR=171
    INT=172
    FLOAT=173
    ID=174
    WS=175

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def jd(self):
            return self.getTypedRuleContext(HireXParser.JdContext,0)


        def showConditional(self):
            return self.getTypedRuleContext(HireXParser.ShowConditionalContext,0)


        def getRuleIndex(self):
            return HireXParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = HireXParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HireXParser.REQUIRE_SECTION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.jd()
                pass
            elif token in [HireXParser.SHOW]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.showConditional()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW(self):
            return self.getToken(HireXParser.SHOW, 0)

        def CV(self):
            return self.getToken(HireXParser.CV, 0)

        def WITH(self):
            return self.getToken(HireXParser.WITH, 0)

        def condition(self):
            return self.getTypedRuleContext(HireXParser.ConditionContext,0)


        def getRuleIndex(self):
            return HireXParser.RULE_showConditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowConditional" ):
                listener.enterShowConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowConditional" ):
                listener.exitShowConditional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShowConditional" ):
                return visitor.visitShowConditional(self)
            else:
                return visitor.visitChildren(self)




    def showConditional(self):

        localctx = HireXParser.ShowConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_showConditional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(HireXParser.SHOW)
            self.state = 65
            self.match(HireXParser.CV)
            self.state = 66
            self.match(HireXParser.WITH)
            self.state = 67
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def requireName(self):
            return self.getTypedRuleContext(HireXParser.RequireNameContext,0)


        def requireTools(self):
            return self.getTypedRuleContext(HireXParser.RequireToolsContext,0)


        def requireProLang(self):
            return self.getTypedRuleContext(HireXParser.RequireProLangContext,0)


        def requireFrameworks(self):
            return self.getTypedRuleContext(HireXParser.RequireFrameworksContext,0)


        def requireDB(self):
            return self.getTypedRuleContext(HireXParser.RequireDBContext,0)


        def requireDegree(self):
            return self.getTypedRuleContext(HireXParser.RequireDegreeContext,0)


        def requireMajor(self):
            return self.getTypedRuleContext(HireXParser.RequireMajorContext,0)


        def requireGPA(self):
            return self.getTypedRuleContext(HireXParser.RequireGPAContext,0)


        def requireExperience(self):
            return self.getTypedRuleContext(HireXParser.RequireExperienceContext,0)


        def requireLanguage(self):
            return self.getTypedRuleContext(HireXParser.RequireLanguageContext,0)


        def getRuleIndex(self):
            return HireXParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = HireXParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_condition)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HireXParser.NAME_LABEL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.requireName()
                pass
            elif token in [HireXParser.TOOL_LABEL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.requireTools()
                pass
            elif token in [HireXParser.PROG_LANG_LABEL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.requireProLang()
                pass
            elif token in [HireXParser.FRAMEWORK_LABEL]:
                self.enterOuterAlt(localctx, 4)
                self.state = 72
                self.requireFrameworks()
                pass
            elif token in [HireXParser.DATA_LABEL]:
                self.enterOuterAlt(localctx, 5)
                self.state = 73
                self.requireDB()
                pass
            elif token in [HireXParser.DEGREE_LABEL]:
                self.enterOuterAlt(localctx, 6)
                self.state = 74
                self.requireDegree()
                pass
            elif token in [HireXParser.MAJOR_LABEL]:
                self.enterOuterAlt(localctx, 7)
                self.state = 75
                self.requireMajor()
                pass
            elif token in [HireXParser.GPA_LABEL]:
                self.enterOuterAlt(localctx, 8)
                self.state = 76
                self.requireGPA()
                pass
            elif token in [HireXParser.EXP_LABEL]:
                self.enterOuterAlt(localctx, 9)
                self.state = 77
                self.requireExperience()
                pass
            elif token in [HireXParser.LANG_LABEL]:
                self.enterOuterAlt(localctx, 10)
                self.state = 78
                self.requireLanguage()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def requirements(self):
            return self.getTypedRuleContext(HireXParser.RequirementsContext,0)


        def preferences(self):
            return self.getTypedRuleContext(HireXParser.PreferencesContext,0)


        def getRuleIndex(self):
            return HireXParser.RULE_jd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJd" ):
                listener.enterJd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJd" ):
                listener.exitJd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJd" ):
                return visitor.visitJd(self)
            else:
                return visitor.visitChildren(self)




    def jd(self):

        localctx = HireXParser.JdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_jd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.requirements()
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireXParser.PREFER_SECTION:
                self.state = 82
                self.preferences()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequirementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REQUIRE_SECTION(self):
            return self.getToken(HireXParser.REQUIRE_SECTION, 0)

        def OPEN_CURLY(self):
            return self.getToken(HireXParser.OPEN_CURLY, 0)

        def requirePosition(self):
            return self.getTypedRuleContext(HireXParser.RequirePositionContext,0)


        def requireLevel(self):
            return self.getTypedRuleContext(HireXParser.RequireLevelContext,0)


        def requireTechnicalSkills(self):
            return self.getTypedRuleContext(HireXParser.RequireTechnicalSkillsContext,0)


        def requireEducation(self):
            return self.getTypedRuleContext(HireXParser.RequireEducationContext,0)


        def requireExperience(self):
            return self.getTypedRuleContext(HireXParser.RequireExperienceContext,0)


        def CLOSE_CURLY(self):
            return self.getToken(HireXParser.CLOSE_CURLY, 0)

        def requireLanguage(self):
            return self.getTypedRuleContext(HireXParser.RequireLanguageContext,0)


        def getRuleIndex(self):
            return HireXParser.RULE_requirements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequirements" ):
                listener.enterRequirements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequirements" ):
                listener.exitRequirements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequirements" ):
                return visitor.visitRequirements(self)
            else:
                return visitor.visitChildren(self)




    def requirements(self):

        localctx = HireXParser.RequirementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_requirements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(HireXParser.REQUIRE_SECTION)
            self.state = 86
            self.match(HireXParser.OPEN_CURLY)
            self.state = 87
            self.requirePosition()
            self.state = 88
            self.requireLevel()
            self.state = 89
            self.requireTechnicalSkills()
            self.state = 90
            self.requireEducation()
            self.state = 91
            self.requireExperience()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireXParser.LANG_LABEL:
                self.state = 92
                self.requireLanguage()


            self.state = 95
            self.match(HireXParser.CLOSE_CURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PreferencesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREFER_SECTION(self):
            return self.getToken(HireXParser.PREFER_SECTION, 0)

        def OPEN_CURLY(self):
            return self.getToken(HireXParser.OPEN_CURLY, 0)

        def CLOSE_CURLY(self):
            return self.getToken(HireXParser.CLOSE_CURLY, 0)

        def requireTools(self):
            return self.getTypedRuleContext(HireXParser.RequireToolsContext,0)


        def requireProLang(self):
            return self.getTypedRuleContext(HireXParser.RequireProLangContext,0)


        def requireFrameworks(self):
            return self.getTypedRuleContext(HireXParser.RequireFrameworksContext,0)


        def requireDB(self):
            return self.getTypedRuleContext(HireXParser.RequireDBContext,0)


        def requireDegree(self):
            return self.getTypedRuleContext(HireXParser.RequireDegreeContext,0)


        def requireGPA(self):
            return self.getTypedRuleContext(HireXParser.RequireGPAContext,0)


        def requireExperience(self):
            return self.getTypedRuleContext(HireXParser.RequireExperienceContext,0)


        def requireLanguage(self):
            return self.getTypedRuleContext(HireXParser.RequireLanguageContext,0)


        def requireActivites(self):
            return self.getTypedRuleContext(HireXParser.RequireActivitesContext,0)


        def getRuleIndex(self):
            return HireXParser.RULE_preferences

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPreferences" ):
                listener.enterPreferences(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPreferences" ):
                listener.exitPreferences(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreferences" ):
                return visitor.visitPreferences(self)
            else:
                return visitor.visitChildren(self)




    def preferences(self):

        localctx = HireXParser.PreferencesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_preferences)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(HireXParser.PREFER_SECTION)
            self.state = 98
            self.match(HireXParser.OPEN_CURLY)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireXParser.TOOL_LABEL:
                self.state = 99
                self.requireTools()


            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireXParser.PROG_LANG_LABEL:
                self.state = 102
                self.requireProLang()


            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireXParser.FRAMEWORK_LABEL:
                self.state = 105
                self.requireFrameworks()


            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireXParser.DATA_LABEL:
                self.state = 108
                self.requireDB()


            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireXParser.DEGREE_LABEL:
                self.state = 111
                self.requireDegree()


            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireXParser.GPA_LABEL:
                self.state = 114
                self.requireGPA()


            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireXParser.EXP_LABEL:
                self.state = 117
                self.requireExperience()


            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireXParser.LANG_LABEL:
                self.state = 120
                self.requireLanguage()


            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HireXParser.ACTIVITY_LABEL:
                self.state = 123
                self.requireActivites()


            self.state = 126
            self.match(HireXParser.CLOSE_CURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequirePositionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POSITION_LABEL(self):
            return self.getToken(HireXParser.POSITION_LABEL, 0)

        def position(self):
            return self.getTypedRuleContext(HireXParser.PositionContext,0)


        def getRuleIndex(self):
            return HireXParser.RULE_requirePosition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequirePosition" ):
                listener.enterRequirePosition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequirePosition" ):
                listener.exitRequirePosition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequirePosition" ):
                return visitor.visitRequirePosition(self)
            else:
                return visitor.visitChildren(self)




    def requirePosition(self):
